# udemy_2dgameengine

./: .gitignore  CMakeLists.txt  README.md  main.cpp
assets/scripts/: Level1.lua
src/: Animation.cpp  Animation.hpp  AssetManager.cpp  AssetManager.hpp  CMakeLists.txt  Collision.cpp  Collision.hpp  Component.hpp  Constants.hpp  Entity.cpp  Entity.hpp  EntityManager.cpp  EntityManager.hpp  FontManager.cpp  FontManager.hpp  Game.cpp  Game.hpp  Map.cpp  Map.hpp  TextureManager.cpp  TextureManager.hpp
src/Components/: ColliderComponent.hpp  KeyboardControlComponent.hpp  ProjectileEmitterComponent.hpp  SpriteComponent.hpp  TextLabelComponent.hpp  TileComponent.hpp  TransformComponent.hpp
